# cantrip

./: .gitignore  CMakeLists.txt  README.md
include/cantrip/: cantrip.hpp
